Fix cards and sliders alignment.

--- a/frontend/styles/components/cards.css
+++ b/frontend/styles/components/cards.css
@@ -36,19 +36,12 @@
     width: 100%;
     height: 100%;
     flex-direction: column;
+    background: var(--Dark);
+    border-radius: 24px;
 }
 
 .project-card:active {
     filter: brightness(0.9);
-}
-
-.swiper-slide-prev.horizontal-card, .swiper-slide-next.horizontal-card,
-.swiper-slide-prev.horizontal-card img, .swiper-slide-next.horizontal-card img {
-    height: calc(100% - 20px) !important;
-    aspect-ratio: 3.45 / 2.3;
-    align-self: center;
-    transition: height 0.3s ease, transform 0.3s ease;
-    will-change: height, transform;
 }
 
 .work-card-container {
@@ -117,14 +110,15 @@
     aspect-ratio: 3.45 / 4.58;
     flex-shrink: 0;
     border-radius: 16px;
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .swiper-slide.vertical-card:last-child {
     margin-right: 15px;
-}
-
-.swiper-slide.vertical-card.swiper-slide-next, .swiper-slide.vertical-card.swiper-slide-prev {
-    height: unset !important;
 }
 
 /* Horizontal cards (with tabs) */
@@ -164,13 +158,18 @@
     aspect-ratio: 3.45 / 2.3;
     border-radius: 16px;
     transition: height 0.3s ease, transform 0.3s ease;
+
+    img {
+        object-fit: fill;
+        width: 100%;
+    }
 }
 
 .horizontal-image {
     display: flex;
     flex: 1 0;
     align-self: flex-start;
-    margin: 0;
+    margin: 0 !important;
     transition: height 0.3s ease, transform 0.3s ease;
 }
 
@@ -233,17 +232,13 @@
     }
 
     .work-card-container {
-        min-width: 690px;
+        width: 690px;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(335px, 1fr));
         grid-gap: 20px;
         grid-row-gap: 20px;
         margin-bottom: 48px;
         align-self: center;
-    }
-
-    .work-card {
-        height: 533px;
     }
 
     .vertical-control-block, .vertical-control-block.swiper {
@@ -263,8 +258,8 @@
     }
 
     .swiper-slide.vertical-card, .vertical-card {
-        width: 213px;
-        height: 460px;
+        width: 213px !important;
+        height: 460px !important;
         max-width: unset;
         max-height: unset;
     }
@@ -289,20 +284,17 @@
     }
 
     .swiper-slide.horizontal-card, .horizontal-card {
-        align-self: stretch;
-        margin: 0 auto;
-        display: flex;
-        height: 100%;
-        width: calc(100vw - var(--scrollbar-width) - 266px);
-        aspect-ratio: 3.45 / 2.3;
-        border-radius: 16px;
-        transition: height 0.3s ease, transform 0.3s ease;
-    }
-
-    .swiper-slide-prev.horizontal-card, .swiper-slide-next.horizontal-card,
-    .swiper-slide-prev.horizontal-card img, .swiper-slide-next.horizontal-card img {
         height: 100% !important;
-        align-self: unset;
+        width: calc(100vw - var(--scrollbar-width) - 266px) !important;
+        background: none;
+        margin: 0 20px;
+        align-self: stretch;
+        transition: height 0.3s ease, transform 0.3s ease;
+
+        img {
+            align-self: stretch;
+            width: 100%;
+        }
     }
 
     .grade-img {
@@ -318,10 +310,15 @@
 
     .horizontal-card.video-container {
         min-height: 275px;
+        align-self: center;
     }
 }
 
 @media (min-width: 1440px) {
+    .project-card {
+        border-radius: 24px;
+    }
+
     .swiper-slide:last-child {
         margin-right: 135px;
     }
@@ -353,7 +350,6 @@
     }
 
     .work-card {
-        height: 624px;
         width: 370px;
     }
 
@@ -369,20 +365,14 @@
     }
 
     .swiper-slide.vertical-card, .vertical-card {
-        height: 494px;
+        width: 370px !important;
+        height: 494px !important;
         border-radius: 24px;
         min-width: unset;
-        width: 370px !important;
     }
 
     .swiper-slide.vertical-card:last-child {
         margin-right: 0;
-    }
-
-    .swiper-slide-prev.vertical-card, .swiper-slide-next.vertical-card,
-    .swiper-slide-prev.vertical-card img, .swiper-slide-next.vertical-card img {
-        height: 494px !important;
-        align-self: unset;
     }
 
     .swiper.horizontal-card-container, .horizontal-card-container {
@@ -403,18 +393,8 @@
 
     .swiper-slide.horizontal-card, .horizontal-card {
         border-radius: 24px;
-        width: calc(100vw - var(--scrollbar-width) - 670px);
-    }
-
-    .swiper-slide-prev.horizontal-card, .swiper-slide-next.horizontal-card,
-    .swiper-slide-prev.horizontal-card img, .swiper-slide-next.horizontal-card img {
-        height: auto !important;
-    }
-
-    .horizontal-card img {
-        width: calc(100vw - var(--scrollbar-width) - 670px);
-        margin: 0 auto;
-        aspect-ratio: 7.7 / 5.15;
+        width: calc(100vw - var(--scrollbar-width) - 670px) !important;
+        margin: 0 30px;
     }
 
     .horizontal-card-container.video-container {
@@ -426,6 +406,7 @@
         width: 100%;
         min-height: 237px;
         height: auto;
+        margin: 0 !important;
     }
 }
 
@@ -452,10 +433,9 @@
         margin: 0 445px;
     }
 
-    .horizontal-card img {
-        width: calc(100vw - var(--scrollbar-width) - 950px);
-        margin: 0 auto;
-        aspect-ratio: 9.7 / 6.5;
+    .swiper-slide.horizontal-card, .horizontal-card {
+        width: calc(100vw - var(--scrollbar-width) - 950px) !important;
+        margin: 0 30px;
     }
 
     .horizontal-card.video-container {
@@ -468,13 +448,8 @@
     }
 
     .swiper-slide.vertical-card, .vertical-card {
-        height: 618px;
-        width: 464px !important;
-    }
-
-    .swiper-slide-prev.vertical-card, .swiper-slide-next.vertical-card,
-    .swiper-slide-prev.vertical-card img, .swiper-slide-next.vertical-card img {
         height: 618px !important;
+        width: 464px !important;
     }
 
     .horizontal-card-container.video-container {
