--- a/frontend/styles/components/header.css
+++ b/frontend/styles/components/header.css
@@ -2,7 +2,7 @@ header {
     position: sticky;
     z-index: 10;
     top: 0;
-    margin: 40px 15px 40px;
+    margin: 40px 15px;
     display: flex;
     padding: 16px 40px;
     justify-self: stretch;
